# PiXiu

./: .travis.yml  CMakeLists.txt  README.md
release/: PiXiuPlus_LINUX  PiXiuPlus_OSX
src/: main.cpp
src/common/: List.h  MemPool.cpp  MemPool.h  Que.h  gen.h  style.h  util.h
src/data_struct/: CritBitTree.cpp  CritBitTree.h  ScapegoatTree.h  SuffixTree.cpp  SuffixTree.h
src/proj/: PiXiuCtrl.cpp  PiXiuCtrl.h  PiXiuStr.cpp  PiXiuStr.h
